[gd_scene load_steps=3 format=2]

[ext_resource path="res://Multiplayer/NetworkSetup.gd" type="Script" id=1]
[ext_resource path="res://Multiplayer/Chat.tscn" type="PackedScene" id=2]

[node name="NetworkSetup" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="MultiplayerConfig" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Create_Server" type="Button" parent="MultiplayerConfig"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.0
margin_right = 52.0
margin_bottom = 20.0
text = "Create Server"

[node name="Join_Server" type="Button" parent="MultiplayerConfig"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -52.0
margin_top = -20.0
margin_right = 52.0
text = "Join Server"

[node name="LineEdit" type="LineEdit" parent="MultiplayerConfig"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_top = -36.0
margin_right = 136.0
margin_bottom = -12.0
text = "enter IP adress"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DeviceIPAdress" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Your IP Adress Should Be Here"

[node name="Chat" parent="." instance=ExtResource( 2 )]
visible = false

[node name="Name" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LineEdit" type="LineEdit" parent="Name"]
margin_left = -120.0
margin_top = -84.0
margin_right = 136.0
margin_bottom = -60.0
text = "Name"
align = 1

[node name="User_List" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 424.0
margin_top = -292.0
margin_right = 504.0
margin_bottom = -164.0

[node name="Start_Game" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -20.0
margin_right = 104.0
margin_bottom = 20.0
text = "Start Game"

[connection signal="pressed" from="MultiplayerConfig/Create_Server" to="." method="_on_Create_Server_pressed"]
[connection signal="pressed" from="MultiplayerConfig/Join_Server" to="." method="_on_Join_Server_pressed"]
[connection signal="pressed" from="Start_Game" to="." method="_on_Start_Game_pressed"]
